// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders profile 1`] = `
<Pagination Helper (Component)
  articleImageRatio="3:2"
  page={1}
  pageSize={10}
  slug="fiona-hamilton"
/>
`;

exports[`renders profile content 1`] = `
<View>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "paddingBottom": 50,
      }
    }
  >
    <View
      accessibilityRole="banner"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F9F8F3",
          "flexDirection": "column",
          "paddingBottom": 50,
          "width": "100%",
        }
      }
    >
      <Text
        accessibility-label="author-name"
        accessibilityRole="heading"
        accessible={true}
        allowFontScaling={true}
        aria-level="1"
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#000",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 45,
            "paddingTop": 32,
          }
        }
        testID="author-name"
      >
        Fiona Hamilton
      </Text>
      <Text
        accessibilityRole="heading"
        accessible={true}
        allowFontScaling={true}
        aria-level="2"
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04-RegularSC",
            "fontSize": 15,
          }
        }
      >
        legal editor
      </Text>
      <Text
        accessibilityRole="link"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        href="https://twitter.com/jdoe"
        onPress={[Function]}
        style={
          Array [
            Object {
              "textDecorationLine": "underline",
            },
            Object {
              "color": "#006699",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 18,
              "paddingTop": 16,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        @
        jdoe
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 16,
            "lineHeight": 26,
            "maxWidth": "88%",
            "paddingBottom": 32,
            "textAlign": "center",
          }
        }
      >
        Lorem 
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          ipsum
        </Text>
         testbr 
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          
          
        </Text>
        More text 
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontStyle": "italic",
            }
          }
        >
           last 
        </Text>
      </Text>
    </View>
    <View
      style={
        Object {
          "bottom": 0,
          "height": 100,
          "position": "absolute",
          "width": 100,
        }
      }
    >
      <View>
        <Image
          aspectRatio={1}
          onLoad={[Function]}
          source={
            Object {
              "uri": "https://feeds.thetimes.co.uk/web/imageserver/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0694e84e-04ff-11e7-976a-0b4b9a1a67a3.jpg?crop=854,854,214,0&resize=200",
            }
          }
          style={
            Object {
              "borderColor": "#FFF",
              "borderRadius": 50,
              "borderWidth": 5,
              "height": 100,
              "overflow": "hidden",
              "width": 100,
            }
          }
        />
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <BVLinearGradient
              colors={
                Array [
                  "#f9f9f9",
                  "#ededed",
                ]
              }
              end={
                Object {
                  "x": -0.09302964577578221,
                  "y": 0.11488204504197774,
                }
              }
              locations={
                Array [
                  0,
                  1,
                ]
              }
              start={
                Object {
                  "x": 1,
                  "y": 0,
                }
              }
              style={
                Array [
                  Object {
                    "flex": 1,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "maxWidth": 800,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "alignItems": "stretch",
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "justifyContent": "center",
                },
                null,
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                  },
                ]
              }
            >
              Showing 1 - 0 of 0 results
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "borderBottomColor": "#dbdbdb",
                  "borderBottomWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "#dbdbdb",
                  "borderTopWidth": 1,
                },
              ]
            }
          >
            <View />
            <View />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "alignItems": "stretch",
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "borderBottomColor": "#dbdbdb",
                  "borderBottomWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "#dbdbdb",
                  "borderTopWidth": 1,
                },
              ]
            }
          >
            <View />
            <View />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders profile content component 1`] = `
<View>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "paddingBottom": 50,
      }
    }
  >
    <View
      accessibilityRole="banner"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F9F8F3",
          "flexDirection": "column",
          "paddingBottom": 50,
          "width": "100%",
        }
      }
    >
      <Text
        accessibility-label="author-name"
        accessibilityRole="heading"
        accessible={true}
        allowFontScaling={true}
        aria-level="1"
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#000",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 45,
            "paddingTop": 32,
          }
        }
        testID="author-name"
      >
        
      </Text>
      <Text
        accessibilityRole="heading"
        accessible={true}
        allowFontScaling={true}
        aria-level="2"
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04-RegularSC",
            "fontSize": 15,
          }
        }
      >
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 16,
            "lineHeight": 26,
            "maxWidth": "88%",
            "paddingBottom": 32,
            "textAlign": "center",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "maxWidth": 800,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "alignItems": "stretch",
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "justifyContent": "center",
                },
                null,
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                  },
                ]
              }
            >
              Showing 1 - 3 of 10 results
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "borderBottomColor": "#dbdbdb",
                  "borderBottomWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "#dbdbdb",
                  "borderTopWidth": 1,
                },
              ]
            }
          >
            <View />
            <View>
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                collapsable={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "marginLeft": 10,
                      "marginRight": 12,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "#006699",
                        "fontFamily": "GillSansMTStd-Medium",
                        "fontSize": 15,
                        "height": 15,
                        "marginRight": 10,
                        "textAlign": "right",
                      }
                    }
                  >
                    Next
                  </Text>
                  <svg
                    height={9}
                    style={Object {}}
                    viewBox="42 12 60 120"
                    width={5}
                  >
                    <g
                      fill="#006699"
                      style={Object {}}
                    >
                      <path
                        d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
                        style={Object {}}
                      />
                    </g>
                  </svg>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityLabel="articleList-0"
        testID="articleList-0"
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "paddingBottom": 10,
                  "paddingTop": 10,
                },
                undefined,
              ]
            }
          >
            <View
              onLayout={[Function]}
            >
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      Object {
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "marginBottom": 0,
                        "marginRight": 10,
                      },
                    ]
                  }
                >
                  <View>
                    <Image
                      aspectRatio={1.5}
                      onLoad={[Function]}
                      source={
                        Object {
                          "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2Feb7842ee-748a-11e7-93f8-c74b9ea57adf.jpg?crop=2250%2C1500%2C-0%2C-0&resize=996",
                        }
                      }
                      style={undefined}
                    />
                    <View
                      onLayout={[Function]}
                      style={
                        Array [
                          Object {
                            "flex": 1,
                          },
                          Object {
                            "height": "100%",
                            "left": 0,
                            "position": "absolute",
                            "top": 0,
                            "width": "100%",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <BVLinearGradient
                          colors={
                            Array [
                              "#f9f9f9",
                              "#ededed",
                            ]
                          }
                          end={
                            Object {
                              "x": -0.09302964577578221,
                              "y": 0.11488204504197774,
                            }
                          }
                          locations={
                            Array [
                              0,
                              1,
                            ]
                          }
                          start={
                            Object {
                              "x": 1,
                              "y": 0,
                            }
                          }
                          style={
                            Array [
                              Object {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      Object {
                        "flexBasis": 0,
                        "flexGrow": 3,
                      },
                    ]
                  }
                >
                  <View
                    style={Object {}}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#333333",
                          "fontFamily": "GillSansMTStd-Medium",
                          "fontSize": 12,
                          "letterSpacing": 1,
                          "marginBottom": 2,
                        }
                      }
                    />
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#333333",
                          "fontFamily": "TimesModern-Bold",
                          "fontSize": 22,
                          "fontWeight": "400",
                          "lineHeight": 22,
                          "marginBottom": 8,
                        }
                      }
                    >
                      British trio stopped on the way to join Isis
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#696969",
                          "flexWrap": "wrap",
                          "fontFamily": "TimesDigitalW04",
                          "fontSize": 14,
                          "lineHeight": 20,
                          "marginBottom": 10,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                      >
                        A tip-off from desperate parents led Turkish police to swoop on three British teenagers as they allegedly travelled to join Islamic State,
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "fontStyle": "italic",
                            }
                          }
                        >
                          The
                        </Text>
                        ...
                      </Text>
                    </Text>
                    <Text
                      accessibilityLabel="datePublication"
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#696969",
                            "fontFamily": "GillSansMTStd-Medium",
                            "fontSize": 13,
                            "lineHeight": 15,
                          },
                          Object {},
                        ]
                      }
                      testID="datePublication"
                    >
                      Monday March 23 2015
                      , The Times
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityLabel="articleList-1"
        testID="articleList-1"
      >
        <View
          style={
            Object {
              "backgroundColor": "#dbdbdb",
              "height": 1,
            }
          }
        />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "paddingBottom": 10,
                  "paddingTop": 10,
                },
                undefined,
              ]
            }
          >
            <View
              onLayout={[Function]}
            >
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      Object {
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "marginBottom": 0,
                        "marginRight": 10,
                      },
                    ]
                  }
                >
                  <View>
                    <Image
                      aspectRatio={1.5}
                      onLoad={[Function]}
                      source={
                        Object {
                          "uri": "https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F2bb30674-b008-11e7-8f75-2b6f1159f66f.jpg?crop=4815%2C2708%2C85%2C1833",
                        }
                      }
                      style={undefined}
                    />
                    <View
                      onLayout={[Function]}
                      style={
                        Array [
                          Object {
                            "flex": 1,
                          },
                          Object {
                            "height": "100%",
                            "left": 0,
                            "position": "absolute",
                            "top": 0,
                            "width": "100%",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <BVLinearGradient
                          colors={
                            Array [
                              "#f9f9f9",
                              "#ededed",
                            ]
                          }
                          end={
                            Object {
                              "x": -0.09302964577578221,
                              "y": 0.11488204504197774,
                            }
                          }
                          locations={
                            Array [
                              0,
                              1,
                            ]
                          }
                          start={
                            Object {
                              "x": 1,
                              "y": 0,
                            }
                          }
                          style={
                            Array [
                              Object {
                                "flex": 1,
                              },
                            ]
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      Object {
                        "flexBasis": 0,
                        "flexGrow": 3,
                      },
                    ]
                  }
                >
                  <View
                    style={Object {}}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#333333",
                          "fontFamily": "GillSansMTStd-Medium",
                          "fontSize": 12,
                          "letterSpacing": 1,
                          "marginBottom": 2,
                        }
                      }
                    />
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#333333",
                          "fontFamily": "TimesModern-Bold",
                          "fontSize": 22,
                          "fontWeight": "400",
                          "lineHeight": 22,
                          "marginBottom": 8,
                        }
                      }
                    >
                      TV review: Victoria; Lucy Worsley’s Nights at the Opera
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#696969",
                          "flexWrap": "wrap",
                          "fontFamily": "TimesDigitalW04",
                          "fontSize": 14,
                          "lineHeight": 20,
                          "marginBottom": 10,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                      >
                        
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "fontWeight": "bold",
                            }
                          }
                        >
                          Victoria
                        </Text>
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                        >
                          
                          
                        </Text>
                        ITV
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                        >
                          
                          
                        </Text>
                        ★★★★☆
                      </Text>
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                      >
                         
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "fontWeight": "bold",
                            }
                          }
                        >
                          Lucy Worsley’s Nights at the Opera
                        </Text>
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                        >
                          
                          
                        </Text>
                        BBC Two
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                        >
                          
                          
                        </Text>
                        ★★★☆☆
                      </Text>
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                      >
                        Poor old Harriet, Duchess of Sutherland. There she was giddily expecting a
                        ...
                      </Text>
                    </Text>
                    <Text
                      accessibilityLabel="datePublication"
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#696969",
                            "fontFamily": "GillSansMTStd-Medium",
                            "fontSize": 13,
                            "lineHeight": 15,
                          },
                          Object {},
                        ]
                      }
                      testID="datePublication"
                    >
                      Tuesday March 17 2015
                      , The Times
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityLabel="articleList-2"
        testID="articleList-2"
      >
        <View
          style={
            Object {
              "backgroundColor": "#dbdbdb",
              "height": 1,
            }
          }
        />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "paddingBottom": 10,
                  "paddingTop": 10,
                },
                undefined,
              ]
            }
          >
            <View
              onLayout={[Function]}
            >
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      Object {
                        "flexBasis": 0,
                        "flexGrow": 3,
                      },
                    ]
                  }
                >
                  <View
                    style={Object {}}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#333333",
                          "fontFamily": "GillSansMTStd-Medium",
                          "fontSize": 12,
                          "letterSpacing": 1,
                          "marginBottom": 2,
                        }
                      }
                    />
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#333333",
                          "fontFamily": "TimesModern-Bold",
                          "fontSize": 22,
                          "fontWeight": "400",
                          "lineHeight": 22,
                          "marginBottom": 8,
                        }
                      }
                    >
                      A blank article with a server rendered component
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#696969",
                          "flexWrap": "wrap",
                          "fontFamily": "TimesDigitalW04",
                          "fontSize": 14,
                          "lineHeight": 20,
                          "marginBottom": 10,
                        }
                      }
                    />
                    <Text
                      accessibilityLabel="datePublication"
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#696969",
                            "fontFamily": "GillSansMTStd-Medium",
                            "fontSize": 13,
                            "lineHeight": 15,
                          },
                          Object {},
                        ]
                      }
                      testID="datePublication"
                    >
                      Monday March 23 2015
                      , The Times
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "alignItems": "stretch",
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "borderBottomColor": "#dbdbdb",
                  "borderBottomWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "#dbdbdb",
                  "borderTopWidth": 1,
                },
              ]
            }
          >
            <View />
            <View>
              <View
                accessibilityComponentType={undefined}
                accessibilityLabel={undefined}
                accessibilityTraits={undefined}
                accessible={true}
                collapsable={undefined}
                hitSlop={undefined}
                isTVSelectable={true}
                nativeID={undefined}
                onLayout={undefined}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID={undefined}
                tvParallaxProperties={undefined}
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "marginLeft": 10,
                      "marginRight": 12,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "#006699",
                        "fontFamily": "GillSansMTStd-Medium",
                        "fontSize": 15,
                        "height": 15,
                        "marginRight": 10,
                        "textAlign": "right",
                      }
                    }
                  >
                    Next
                  </Text>
                  <svg
                    height={9}
                    style={Object {}}
                    viewBox="42 12 60 120"
                    width={5}
                  >
                    <g
                      fill="#006699"
                      style={Object {}}
                    >
                      <path
                        d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
                        style={Object {}}
                      />
                    </g>
                  </svg>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders profile content item component 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Object {
                "flexBasis": 0,
                "flexGrow": 2,
                "marginBottom": 0,
                "marginRight": 10,
              },
            ]
          }
        >
          <View>
            <Image
              aspectRatio={1.5}
              onLoad={[Function]}
              source={
                Object {
                  "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2Feb7842ee-748a-11e7-93f8-c74b9ea57adf.jpg?crop=2250%2C1500%2C-0%2C-0&resize=996",
                }
              }
              style={undefined}
            />
            <View
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "flex": 1,
                  },
                  Object {
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <BVLinearGradient
                  colors={
                    Array [
                      "#f9f9f9",
                      "#ededed",
                    ]
                  }
                  end={
                    Object {
                      "x": -0.09302964577578221,
                      "y": 0.11488204504197774,
                    }
                  }
                  locations={
                    Array [
                      0,
                      1,
                    ]
                  }
                  start={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  style={
                    Array [
                      Object {
                        "flex": 1,
                      },
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Object {
                "flexBasis": 0,
                "flexGrow": 3,
              },
            ]
          }
        >
          <View
            style={Object {}}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 12,
                  "letterSpacing": 1,
                  "marginBottom": 2,
                }
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesModern-Bold",
                  "fontSize": 22,
                  "fontWeight": "400",
                  "lineHeight": 22,
                  "marginBottom": 8,
                }
              }
            >
              British trio stopped on the way to join Isis
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#696969",
                  "flexWrap": "wrap",
                  "fontFamily": "TimesDigitalW04",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
              >
                A tip-off from desperate parents led Turkish police to swoop on three British teenagers as they allegedly travelled to join Islamic State,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontStyle": "italic",
                    }
                  }
                >
                  The
                </Text>
                ...
              </Text>
            </Text>
            <Text
              accessibilityLabel="datePublication"
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                  },
                  Object {},
                ]
              }
              testID="datePublication"
            >
              Monday March 23 2015
              , The Times
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders profile content item component with no image  1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Object {
                "flexBasis": 0,
                "flexGrow": 2,
                "marginBottom": 0,
                "marginRight": 10,
              },
            ]
          }
        >
          <View>
            <Image
              aspectRatio={1.5}
              onLoad={[Function]}
              source={
                Object {
                  "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2Feb7842ee-748a-11e7-93f8-c74b9ea57adf.jpg?crop=2250%2C1500%2C-0%2C-0&resize=996",
                }
              }
              style={undefined}
            />
            <View
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "flex": 1,
                  },
                  Object {
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <BVLinearGradient
                  colors={
                    Array [
                      "#f9f9f9",
                      "#ededed",
                    ]
                  }
                  end={
                    Object {
                      "x": -0.09302964577578221,
                      "y": 0.11488204504197774,
                    }
                  }
                  locations={
                    Array [
                      0,
                      1,
                    ]
                  }
                  start={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  style={
                    Array [
                      Object {
                        "flex": 1,
                      },
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flexGrow": 1,
                "flexShrink": 1,
              },
              Object {
                "flexBasis": 0,
                "flexGrow": 3,
              },
            ]
          }
        >
          <View
            style={Object {}}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 12,
                  "letterSpacing": 1,
                  "marginBottom": 2,
                }
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesModern-Bold",
                  "fontSize": 22,
                  "fontWeight": "400",
                  "lineHeight": 22,
                  "marginBottom": 8,
                }
              }
            >
              British trio stopped on the way to join Isis
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#696969",
                  "flexWrap": "wrap",
                  "fontFamily": "TimesDigitalW04",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginBottom": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
              >
                A tip-off from desperate parents led Turkish police to swoop on three British teenagers as they allegedly travelled to join Islamic State,
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "fontStyle": "italic",
                    }
                  }
                >
                  The
                </Text>
                ...
              </Text>
            </Text>
            <Text
              accessibilityLabel="datePublication"
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                  },
                  Object {},
                ]
              }
              testID="datePublication"
            >
              Monday March 23 2015
              , The Times
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders profile empty 1`] = `
<View>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "paddingBottom": 50,
      }
    }
  >
    <View
      accessibilityRole="banner"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F9F8F3",
          "flexDirection": "column",
          "paddingBottom": 50,
          "width": "100%",
        }
      }
    >
      <Text
        accessibility-label="author-name"
        accessibilityRole="heading"
        accessible={true}
        allowFontScaling={true}
        aria-level="1"
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#000",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 45,
            "paddingTop": 32,
          }
        }
        testID="author-name"
      >
        
      </Text>
      <Text
        accessibilityRole="heading"
        accessible={true}
        allowFontScaling={true}
        aria-level="2"
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04-RegularSC",
            "fontSize": 15,
          }
        }
      >
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 16,
            "lineHeight": 26,
            "maxWidth": "88%",
            "paddingBottom": 32,
            "textAlign": "center",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "maxWidth": 800,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "alignItems": "stretch",
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "justifyContent": "center",
                },
                null,
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                  },
                ]
              }
            >
              Showing 1 - 0 of 0 results
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "borderBottomColor": "#dbdbdb",
                  "borderBottomWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "#dbdbdb",
                  "borderTopWidth": 1,
                },
              ]
            }
          >
            <View />
            <View />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "alignItems": "stretch",
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "borderBottomColor": "#dbdbdb",
                  "borderBottomWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "#dbdbdb",
                  "borderTopWidth": 1,
                },
              ]
            }
          >
            <View />
            <View />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders profile error 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    An error ocurred
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    {
      "error": "error"
    }
  </Text>
</View>
`;

exports[`renders profile loading 1`] = `
<View>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "paddingBottom": 50,
      }
    }
  >
    <View
      accessibilityRole="banner"
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F9F8F3",
          "flexDirection": "column",
          "paddingBottom": 50,
          "width": "100%",
        }
      }
    >
      <Text
        accessibility-label="author-name"
        accessibilityRole="heading"
        accessible={true}
        allowFontScaling={true}
        aria-level="1"
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#000",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 45,
            "paddingTop": 32,
          }
        }
        testID="author-name"
      >
        Fiona Hamilton
      </Text>
      <Text
        accessibilityRole="heading"
        accessible={true}
        allowFontScaling={true}
        aria-level="2"
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04-RegularSC",
            "fontSize": 15,
          }
        }
      >
        legal editor
      </Text>
      <Text
        accessibilityRole="link"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        href="https://twitter.com/jdoe"
        onPress={[Function]}
        style={
          Array [
            Object {
              "textDecorationLine": "underline",
            },
            Object {
              "color": "#006699",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 18,
              "paddingTop": 16,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        @
        jdoe
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 16,
            "lineHeight": 26,
            "maxWidth": "88%",
            "paddingBottom": 32,
            "textAlign": "center",
          }
        }
      >
        Lorem 
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          ipsum
        </Text>
         testbr 
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          
          
        </Text>
        More text 
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontStyle": "italic",
            }
          }
        >
           last 
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "maxWidth": 800,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "alignItems": "stretch",
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "justifyContent": "center",
                },
                null,
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                  },
                ]
              }
            >
              Showing 1 - 0 of 0 results
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "borderBottomColor": "#dbdbdb",
                  "borderBottomWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "#dbdbdb",
                  "borderTopWidth": 1,
                },
              ]
            }
          >
            <View />
            <View />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityLabel="articleList-0"
        testID="articleList-0"
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "paddingBottom": 10,
                  "paddingTop": 10,
                },
                undefined,
              ]
            }
          >
            <View
              onLayout={[Function]}
            >
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      Object {
                        "flexBasis": 0,
                        "flexGrow": 3,
                      },
                    ]
                  }
                >
                  <View
                    style={Object {}}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#333333",
                          "fontFamily": "GillSansMTStd-Medium",
                          "fontSize": 12,
                          "letterSpacing": 1,
                          "marginBottom": 2,
                        }
                      }
                    >
                      
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#333333",
                          "fontFamily": "TimesModern-Bold",
                          "fontSize": 22,
                          "fontWeight": "400",
                          "lineHeight": 22,
                          "marginBottom": 8,
                        }
                      }
                    >
                      
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#696969",
                          "flexWrap": "wrap",
                          "fontFamily": "TimesDigitalW04",
                          "fontSize": 14,
                          "lineHeight": 20,
                          "marginBottom": 10,
                        }
                      }
                    />
                    <Text
                      accessibilityLabel="datePublication"
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#696969",
                            "fontFamily": "GillSansMTStd-Medium",
                            "fontSize": 13,
                            "lineHeight": 15,
                          },
                          Object {},
                        ]
                      }
                      testID="datePublication"
                    >
                      Thursday January 01 1970
                      
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityLabel="articleList-1"
        testID="articleList-1"
      >
        <View
          style={
            Object {
              "backgroundColor": "#dbdbdb",
              "height": 1,
            }
          }
        />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "paddingBottom": 10,
                  "paddingTop": 10,
                },
                undefined,
              ]
            }
          >
            <View
              onLayout={[Function]}
            >
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      Object {
                        "flexBasis": 0,
                        "flexGrow": 3,
                      },
                    ]
                  }
                >
                  <View
                    style={Object {}}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#333333",
                          "fontFamily": "GillSansMTStd-Medium",
                          "fontSize": 12,
                          "letterSpacing": 1,
                          "marginBottom": 2,
                        }
                      }
                    >
                      
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#333333",
                          "fontFamily": "TimesModern-Bold",
                          "fontSize": 22,
                          "fontWeight": "400",
                          "lineHeight": 22,
                          "marginBottom": 8,
                        }
                      }
                    >
                      
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#696969",
                          "flexWrap": "wrap",
                          "fontFamily": "TimesDigitalW04",
                          "fontSize": 14,
                          "lineHeight": 20,
                          "marginBottom": 10,
                        }
                      }
                    />
                    <Text
                      accessibilityLabel="datePublication"
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#696969",
                            "fontFamily": "GillSansMTStd-Medium",
                            "fontSize": 13,
                            "lineHeight": 15,
                          },
                          Object {},
                        ]
                      }
                      testID="datePublication"
                    >
                      Thursday January 01 1970
                      
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityLabel="articleList-2"
        testID="articleList-2"
      >
        <View
          style={
            Object {
              "backgroundColor": "#dbdbdb",
              "height": 1,
            }
          }
        />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "paddingBottom": 10,
                  "paddingTop": 10,
                },
                undefined,
              ]
            }
          >
            <View
              onLayout={[Function]}
            >
              <View
                style={
                  Array [
                    Object {
                      "flexDirection": "row",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      Object {
                        "flexBasis": 0,
                        "flexGrow": 3,
                      },
                    ]
                  }
                >
                  <View
                    style={Object {}}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#333333",
                          "fontFamily": "GillSansMTStd-Medium",
                          "fontSize": 12,
                          "letterSpacing": 1,
                          "marginBottom": 2,
                        }
                      }
                    >
                      
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#333333",
                          "fontFamily": "TimesModern-Bold",
                          "fontSize": 22,
                          "fontWeight": "400",
                          "lineHeight": 22,
                          "marginBottom": 8,
                        }
                      }
                    >
                      
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "#696969",
                          "flexWrap": "wrap",
                          "fontFamily": "TimesDigitalW04",
                          "fontSize": 14,
                          "lineHeight": 20,
                          "marginBottom": 10,
                        }
                      }
                    />
                    <Text
                      accessibilityLabel="datePublication"
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#696969",
                            "fontFamily": "GillSansMTStd-Medium",
                            "fontSize": 13,
                            "lineHeight": 15,
                          },
                          Object {},
                        ]
                      }
                      testID="datePublication"
                    >
                      Thursday January 01 1970
                      
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "alignItems": "stretch",
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "space-between",
                },
                Object {
                  "borderBottomColor": "#dbdbdb",
                  "borderBottomWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "#dbdbdb",
                  "borderTopWidth": 1,
                },
              ]
            }
          >
            <View />
            <View />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders profile separator 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#dbdbdb",
      "height": 1,
    }
  }
/>
`;
